--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ plugins {
 group 'com.raychenon'
 version '1.0'
 
+apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'jacoco'
+
 sourceCompatibility = 1.8
 
 repositories {
@@ -22,4 +26,24 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+
+task codeCoverageReport(type: JacocoReport) {
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+
+    subprojects.each {
+        sourceSets it.sourceSets.main
+    }
+
+    reports {
+        xml.enabled true
+        xml.destination "${buildDir}/reports/jacoco/report.xml"
+        html.enabled false
+        csv.enabled false
+    }
+}
+
+codeCoverageReport.dependsOn {
+    subprojects*.test
 }
