--- a/build.gradle
+++ b/build.gradle
@@ -3,22 +3,26 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.0'
 }
 
-group 'com.raychenon'
-version '1.0'
+allprojects {
+    apply plugin: 'java'
+    apply plugin: 'maven'
+    apply plugin: 'jacoco'
 
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'jacoco'
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
-sourceCompatibility = 1.8
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        jcenter()
 
-repositories {
-    mavenCentral()
-}
+        maven { url "http://repo1.maven.org/maven2/" }
+    }
 
-dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    dependencies {
+        compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+    }
 }
 
 compileKotlin {
@@ -29,6 +33,7 @@ compileTestKotlin {
 }
 
 subprojects {
+
     test.useTestNG()
 }
 
