--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ task codeCoverageReport(type: JacocoReport) {
 
     reports {
         xml.enabled true
-        xml.destination "${buildDir}/reports/jacoco/report.xml"
+        xml.setDestination(file("${buildDir}/reports/jacoco/report.xml"))
         html.enabled false
         csv.enabled false
     }
