--- a/build.gradle
+++ b/build.gradle
@@ -57,3 +57,5 @@ task codeCoverageReport(type: JacocoReport) {
 codeCoverageReport.dependsOn {
     subprojects*.test
 }
+
+check.dependsOn codeCoverageReport
