#1 keep only jacocoTestReport

--- a/build.gradle
+++ b/build.gradle
@@ -37,33 +37,16 @@ subprojects {
     test.useTestNG()
 }
 
-task codeCoverageReport(type: JacocoReport) {
-    sourceDirectories = files(subprojects.sourceSets.main.allSource.srcDirs)
-    classDirectories = files(subprojects.sourceSets.main.output)
-    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
-    
-    subprojects.each {
-        sourceSets it.sourceSets.main
-    }
-
+jacocoTestReport {
     reports {
         xml.enabled true
-        xml.setDestination(file("${buildDir}/reports/jacoco/report.xml"))
         html.enabled false
         csv.enabled false
     }
 }
 
-codeCoverageReport.dependsOn {
+jacocoTestReport.dependsOn {
     subprojects*.test
 }
 
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        html.enabled false
-    }
-}
-
 check.dependsOn jacocoTestReport
-check.dependsOn codeCoverageReport
