--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.0'
@@ -54,12 +55,14 @@ task codeCoverageReport(type: JacocoReport) {
     }
 }
 
+codeCoverageReport.dependsOn {
+    subprojects*.test
+}
 
 jacocoTestReport {
     reports {
         xml.enabled true
         html.enabled false
-        csv.enabled false
     }
 }
 
