--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,10 @@
 version: 2
 jobs:
   build:
+    working_directory: ~/algorithms
     docker:
-      # specify the version you desire here
       - image: circleci/openjdk:8-jdk
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
 
     environment:
       # Customize the JVM maximum heap limit
