#11 replace jacocoTestReport  by codeCoverageReport

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,4 +34,5 @@ jobs:
       # run tests!
       - run: gradle test
       - run: gradle check
-      - run: gradle jacocoTestReport
+      # run coverage report
+      - run: gradle codeCoverageReport
