--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_script:
   - chmod +x gradlew
 script:
   - ./gradlew check
-  - ./gradlew jacocoTestReport
+  - ./gradlew codeCoverageReport
 after_success:
   - bash <(curl -s https://codecov.io/bash)
