--- a/build.gradle
+++ b/build.gradle
@@ -38,26 +38,6 @@ subprojects {
     test.useTestNG()
 }
 
-task codeCoverageReport(type: JacocoReport) {
-    sourceDirectories = files(subprojects.sourceSets.main.allSource.srcDirs)
-    classDirectories = files(subprojects.sourceSets.main.output)
-    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
-
-    subprojects.each {
-        sourceSets it.sourceSets.main
-    }
-
-    reports {
-        xml.enabled true
-        xml.setDestination(file("${buildDir}/reports/jacoco/report.xml"))
-        html.enabled false
-    }
-}
-
-codeCoverageReport.dependsOn {
-    subprojects*.test
-}
-
 jacocoTestReport {
     reports {
         xml.enabled true
@@ -65,4 +45,4 @@ jacocoTestReport {
     }
 }
 
-check.dependsOn codeCoverageReport
+check.dependsOn jacocoTestReport
