--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
 
 install: echo "skip 'gradle assemble' step"
 script:
+  - ./gradlew check
   - ./gradlew build --continue
   - ./gradlew jacocoTestReport
 after_success:
