#30 stop code coverage with Travis CI in conflict with  Circle CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ install: echo "skip 'gradle assemble' step"
 script:
   - ./gradlew check
   - ./gradlew build --continue
-  - ./gradlew jacocoTestReport
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+# Circle CI reports the test coverage
+#
+#  - ./gradlew jacocoTestReport
+#after_success:
+#  - bash <(curl -s https://codecov.io/bash)
