#30 revert Travis CI uploads the code coverage Circle CI has Orb problem

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,6 @@ install: echo "skip 'gradle assemble' step"
 script:
   - ./gradlew check
   - ./gradlew build --continue
-# Circle CI reports the test coverage
-#
-#  - ./gradlew jacocoTestReport
-#after_success:
-#  - bash <(curl -s https://codecov.io/bash)
+  - ./gradlew jacocoTestReport
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
