--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,32 @@
-language: java
-jdk:
-  - oraclejdk8
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-cache:
-  bundler: true
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-before_script:
-  - chmod +x gradlew
+matrix:
+  include:
+    - language: java
+      jdk:
+        - oraclejdk8
+      before_cache:
+        - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+        - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+      cache:
+        bundler: true
+        directories:
+          - $HOME/.gradle/caches/
+          - $HOME/.gradle/wrapper/
+      before_script:
+        - chmod +x gradlew
 
-install: echo "skip 'gradle assemble' step"
-script:
-  - ./gradlew check
-  - ./gradlew build --continue
-  - ./gradlew jacocoTestReport
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+      install: echo "skip 'gradle assemble' step"
+      script:
+        - ./gradlew check
+        - ./gradlew build --continue
+        - ./gradlew jacocoTestReport
+      after_success:
+        - bash <(curl -s https://codecov.io/bash)
+    - language: python
+      python:
+        - 3.7
+      before_install:
+        - cd python3/
+      install:
+        - pip install -r requirements.txt
+      script:
+        - python manage.py test
