#39 use dist xenial for python >= 3.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,11 @@ matrix:
       after_success:
         - bash <(curl -s https://codecov.io/bash)
     - language: python
+      dist: xenial
       python:
         - 3.7
+      virtualenv:
+        system_site_packages: true
       before_install:
         - cd python3/
       install:
