--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
     - language: python
       python:
         - 3.6
+      dist: xenial
       virtualenv:
         system_site_packages: true
       before_install:
