--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,15 @@ matrix:
       python:
         - 3.6
       dist: xenial
+      sudo: true
       virtualenv:
         system_site_packages: true
       before_install:
         - cd python3/
+        - sudo apt-get update
+        - sudo apt-get install python3
       install:
+        - pip install --upgrade virtualenv
         - pip install -r requirements.txt
       script:
         - python manage.py test
