--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,4 @@ matrix:
         - pip install --upgrade virtualenv
         - pip install -r requirements.txt
       script:
-        - python manage.py test
+        - python test_all.py
