--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,9 @@ matrix:
       install:
         - pip install --upgrade virtualenv
         - pip install -r requirements.txt
+        - pip install codecov
       script:
-        - python test_all.py
+#        - python test_all.py
+        - ./tests.sh
+      after_success:
+        - codecov
