--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ matrix:
         - pip install -r requirements.txt
         - pip install codecov
       script:
-        - python test_all.py
+#        - python test_all.py
+        - python -m unittest2 discover hackerrank
       after_success:
         - codecov
