--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,34 @@ jobs:
       JVM_OPTS: -Xmx3200m
       TERM: dumb
     orbs:
-      codecov: codecov/codecov@1.0.2
+      codecov: codecov/codecov@1.0.5
+    commands:
+      upload:
+        parameters:
+          conf:
+            description: Used to specify the location of the .codecov.yml config file
+            type: string
+            default: ".codecov.yml"
+          file:
+            description: Path to the code coverage data file to upload.
+            type: string
+            default: ""
+          flags:
+            description: Flag the upload to group coverage metrics (e.g. unittests | integration | ui,chrome)
+            type: string
+            default: ""
+          token:
+            description: Set the private repository token (defaults to environment variable $CODECOV_TOKEN)
+            type: string
+            default: ${CODECOV_TOKEN}
+          upload_name:
+            description: Custom defined name of the upload. Visible in Codecov UI
+            type: string
+            default: ${CIRCLE_BUILD_NUM}
+          when:
+            description: When should this step run?
+            type: string
+            default: "always"
     steps:
       - checkout
 
@@ -40,4 +67,10 @@ jobs:
       - run:
           name: Upload Coverage Results
           command: |
-            curl -s https://codecov.io/bash | bash -s
+            curl -s https://codecov.io/bash | bash -s -- \
+              -t "<< parameters.token >>" \
+              -n "<< parameters.upload_name >>" \
+              -y "<< parameters.conf >>" \
+              -F "<< parameters.flags >>" \
+              -Z || echo 'Codecov upload failed'
+            when: << parameters.when >>
