--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,5 @@ jobs:
       - run: gradle test
       # run coverage report
       - run: gradle jacocoTestReport
-      - codecov/upload
+      - codecov/upload:
+          file: ../build/reports/jacoco/test/jacocoTestReport.xml
