--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,9 @@ matrix:
       after_success:
         - bash <(curl -s https://codecov.io/bash)
         # Upload code coverage to code climate - with workaround for jacoco
-        - cp target/site/jacoco/jacoco.xml src/main/java/jacoco.xml
-        - cd src/main/java/
-        - ../../../cc-test-reporter after-build -t jacoco --exit-code $TRAVIS_TEST_RESULT
+        # - ./cc-test-reporter format-coverage -d -t jacoco ./build/reports/jacoco/test/jacocoTestReport.xml
+        # - ./cc-test-reporter upload-coverage -d
+        - ./cc-test-reporter after-build -t jacoco --exit-code $TRAVIS_TEST_RESULT
     - language: python
       python:
         - 3.6
