--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,7 @@ matrix:
         - ./gradlew jacocoTestReport
       after_success:
         - bash <(curl -s https://codecov.io/bash)
-        # Upload code coverage to code climate - with workaround for jacoco
-        # - ./cc-test-reporter format-coverage -d -t jacoco ./build/reports/jacoco/test/jacocoTestReport.xml
-        # - ./cc-test-reporter upload-coverage -d
+        # Upload code coverage to code climate
         - ./cc-test-reporter after-build -t jacoco --exit-code $TRAVIS_TEST_RESULT
     - language: python
       python:
@@ -50,4 +48,5 @@ matrix:
         - python -m unittest2 discover codility
       after_success:
         - codecov
+        # code climate
         - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
