--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ matrix:
           - $HOME/.gradle/wrapper/
       before_script:
         - chmod +x gradlew
+        # Set up code climate test reporter
+        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        - chmod +x ./cc-test-reporter
+        - ./cc-test-reporter before-build
 
       install: echo "skip 'gradle assemble' step"
       script:
@@ -21,6 +25,8 @@ matrix:
         - ./gradlew jacocoTestReport
       after_success:
         - bash <(curl -s https://codecov.io/bash)
+        # Upload code coverage to code climate
+        - ./cc-test-reporter after-build -t jacoco --exit-code $TRAVIS_TEST_RESULT
     - language: python
       python:
         - 3.6
