--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ matrix:
       after_success:
         - bash <(curl -s https://codecov.io/bash)
         # Upload code coverage to code climate
+        - ./cc-test-reporter format-coverage -d -t jacoco /build/reports/jacoco/test/jacocoTestReport.xml
+        - ./cc-test-reporter upload-coverage -d
         - ./cc-test-reporter after-build -t jacoco --exit-code $TRAVIS_TEST_RESULT
     - language: python
       python:
