--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,8 @@ subprojects {
 jacocoTestReport {
     reports {
         xml.enabled true
-        html.enabled false
+        html.enabled true
+        html.destination file("${buildDir}/jacocoHtml")
     }
 }
 
