#70 apply https://github.com/codeclimate/test-reporter/issues/243#issuecomment-456673215

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,11 @@ matrix:
       after_success:
         - bash <(curl -s https://codecov.io/bash)
         # Upload code coverage to code climate
-        - ./cc-test-reporter format-coverage -d -t jacoco /build/reports/jacoco/test/jacocoTestReport.xml
+        - JACOCO_SOURCE_PATH=src/main/java ./cc-test-reporter \
+          format-coverage build/reports/jacoco/test/jacocoTestReport.xml     \
+          --input-type jacoco
+          ./cc-test-reporter upload-coverage
         - ./cc-test-reporter upload-coverage -d
-        - ./cc-test-reporter after-build -t jacoco --exit-code $TRAVIS_TEST_RESULT
     - language: python
       python:
         - 3.6
