--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.0'
 }
 
+jacoco {
+    toolVersion = "0.8.2"
+    reportsDir = file("$buildDir/customJacocoReportDir")
+}
+
 allprojects {
     apply plugin: 'java'
     apply plugin: 'maven'
@@ -43,7 +48,6 @@ jacocoTestReport {
     reports {
         xml.enabled true
         html.enabled true
-        html.destination file("${buildDir}/jacocoHtml")
     }
 }
 
