--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 jacoco {
-    toolVersion = "0.8.2"
+    toolVersion = "0.8.4"
     reportsDir = file("$buildDir/customJacocoReportDir")
 }
 
@@ -47,7 +47,8 @@ subprojects {
 jacocoTestReport {
     reports {
         xml.enabled true
-        html.enabled true
+        csv.enabled false
+        html.destination file("${buildDir}/jacocoHtml")
     }
 }
 
