--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,12 @@ matrix:
       script:
         - ./gradlew check
         - ./gradlew clean build jacocoTestReport
+        - ./gradlew copyJacocoReport
       after_success:
         - bash <(curl -s https://codecov.io/bash)
         # Upload code coverage to code climate
         - JACOCO_SOURCE_PATH=src/main/java
-        - ./cc-test-reporter format-coverage build/reports/jacoco/test/jacocoTestReport.xml --input-type jacoco
+        - ./cc-test-reporter format-coverage build/jacoco/jacoco.xml --input-type jacoco
         - ./cc-test-reporter upload-coverage
     - language: python
       python:
