--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,11 @@ matrix:
         - bash <(curl -s https://codecov.io/bash)
         # Set up xml path for code climate
         - JACOCO_SOURCE_PATH=src/main
-        - ./cc-test-reporter format-coverage ./build/jacoco/jacoco.xml --input-type jacoco
+        - ./cc-test-reporter format-coverage ./build/reports/jacoco/test/jacocoTestReport.xml --input-type jacoco
         # Upload coverage to code climate
         - run:
             name: Upload code climate report
-            command: ./cc-test-reporter upload-coverage -r $CC_TEST_REPORTER_ID
+            command: ./cc-test-reporter upload-coverage -d -r $CC_TEST_REPORTER_ID
             when: on_success
     - language: python
       python:
