--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: gradle dependencies
+      - run: ./gradlew dependencies
 
       - save_cache:
           paths:
@@ -32,7 +32,7 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
-      - run: gradle check
-      - run: gradle test
+      - run: ./gradlew check
+      - run: ./gradlew test
       # run coverage report
-      - run: gradle jacocoTestReport
+      - run: ./gradlew jacocoTestReport
