--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ allprojects {
         compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
         testCompile group: 'junit', name: 'junit', version: '4.12'
+        testImplementation 'org.hamcrest:hamcrest-library:2.2'
     }
 }
 
