--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,9 @@ allprojects {
     }
 
     dependencies {
-        compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-        testCompile group: 'junit', name: 'junit', version: '4.12'
+        testCompile 'junit:junit:4.13.1'
         testImplementation 'org.hamcrest:hamcrest-library:2.2'
     }
 }
