--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'jacoco'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
 }
 
 jacoco {
@@ -13,8 +13,8 @@ allprojects {
     apply plugin: 'maven'
     apply plugin: 'jacoco'
 
-    sourceCompatibility = 1.9
-    targetCompatibility = 1.9
+    sourceCompatibility = 1.16
+    targetCompatibility = 1.16
 
     repositories {
         mavenLocal()
@@ -28,6 +28,9 @@ allprojects {
         compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
         testCompile group: 'junit', name: 'junit', version: '4.12'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+        testImplementation 'org.assertj:assertj-core:3.19.0'
+
         testImplementation 'org.hamcrest:hamcrest-library:2.2'
     }
 }
