--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,14 @@
 #
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
-version: 2
+version: 2.1
+orbs:
+  gradle: circleci/gradle@3.0.0
 jobs:
   build:
     working_directory: ~/algorithms
     docker:
-      - image: circleci/openjdk:9.0.4-jdk
+      - image: cimg/openjdk:19.0.2
 
     environment:
       # Customize the JVM maximum heap limit
@@ -16,7 +18,7 @@ jobs:
 
     steps:
       - checkout
-
+      - run: java --version
       # Download and cache dependencies
       - restore_cache:
           keys:
