--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,7 +35,12 @@ jobs:
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
-
+    - name: Check with Gradle Wrapper
+      run: ./gradlew check
+    - name: Tests
+      run: ./gradlew test
+    - name: Run coverage repo
+      run: ./gradlew jacocoTestReport
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
     #
