--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -27,10 +27,13 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      working-directory: ./python3
       run: |
         python -m pip install --upgrade pip
+#        python -m pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
+      working-directory: ./python3
       run: |
         pytest codility/*
         pytest hackerrank/*
